# Turfie

./: README.md  pyproject.toml
turfie/: app.py  config.json  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  routes.py  validators.py
turfie/db/: __init__.py  db.py  models.py
turfie/static/css/: style.css
turfie/static/js/: dashboard.js  groupdashboard.js  notifications.js  register.js
turfie/templates/: base.html  dashboard.html  footer.html  groupdashboard.html  header.html  index.html  joingroup.html  joinrequest.html  login.html  managegroup.html  notifications.html  register.html
turfie/templates/components/: creategroupmodal.html  group.html  group_join.html  notification.html  turfmodal.html
